# utils

piolib/: CMakeLists.txt
piolib/mymodule/: CMakeLists.txt  mymodule.c  testmod.py
